Swagger documentation completions
* Modify operationId throughout the API to avoid name conflicts
